fix: dark mode implementation

--- a/src/_includes/assets/css/global.css
+++ b/src/_includes/assets/css/global.css
@@ -289,6 +289,10 @@ body {
   color: var(--primary-background);
 }
 
+html.dark-mode ::selection {
+  color: var(--primary-color);
+}
+
 hr {
   position: relative;
   display: block;
